he cambiado el color del input:focus por verde

--- a/Grupos.css
+++ b/Grupos.css
@@ -63,7 +63,7 @@ input:focus
 {
     display: block;
     border-radius:10px;
-    border-color: black; 	
+    border-color: green; 	
 }
 textarea
 {
